# anki-llm-assistant

./: .gitignore  .invoke.yaml  README.md  env.example  implementation.yaml  invariants.yaml  pyproject.toml  reply_contracts.yaml  tasks.py  tools.yaml
.cursor/rules/: 00-spec-first.mdc  10-specs-agents.mdc
app/: main.py
app/models/: schemas.py
app/routers/: chat.py  ops.py
app/services/: README.md  anki.py  cards.py  compaction.py  decks.py  llm.py  logic.py
app/static/: app.js  styles.css
app/templates/: index.html
specs/: agent.spec.md  cli.yaml  implementation.yaml  tools.yaml
specs/prompts/: react_agent.prompt
specs/schemas/: card.schema.yaml  card_list.schema.yaml  card_list_input.schema.yaml  common.schema.json  deck.schema.yaml  deck_list.schema.yaml  deck_list_input.schema.yaml  models.py  tool_specs.py
specs/schemas/responses/: card_list.schema.json  deck_list.schema.json
specs/schemas/tools/: anki_list_cards.schema.json  anki_list_decks.schema.json
src/: agent.py  config.py  reply_contracts.py
src/app/: __init__.py  agent_factory_gen.py  cli.py  cli_parser.py  main.py
src/app/tools/: __init__.py  anki_list_cards_gen.py  anki_list_decks_gen.py  register_tools.py
src/core/: dependencies.py
src/core/agent/: agent_builder.py  agent_factory.py
src/core/configs/: config.py
src/scripts/: schema_generator.py  tool_generator.py
tests/: test_anki_services.py  test_golden.py  test_logic.py
tests/golden/: 001_list_decks.input.json  001_list_decks.output.json  002_list_cards.input.json  002_list_cards.output.json
(+15 files in other folders)
